# CodeExp

./: .envrc_example  .gitignore  LICENSE  README.md  pyproject.toml
code2text/Codex/: codex.ipynb  codex_by_chunks.ipynb
code2text/GPT-J/: .amltconfig  .amltignore  dockerfile  eval-gpt-neo.py  finetune-gpt-neo.py  finetune-gpt-neo_cli.sh  finetune-stage2-gpt-neo_cli.sh  fintune_gpt-j.py  gpt-j.pre.py  make_step2_filter_with_ml_annotator.py  prepare_explanation_plus_conala.ipynb  requirements.txt  submit.yaml  submit_hai6.sh  submit_hai6.yaml
code2text/codeT5/: .amltconfig  eval-codeT5.py  finetune-codeT5.py  finetune-codeT5_cli.sh  inference.py  requirements.txt  run_summarization.py  submit.sh  submit.yaml  submit_hai6.yaml
code2text/eval/: eval.py  ml_metrics.py  ml_metrics_step2.py
code2text/eval/tests/: test_eval.py
dataset/scripts/: explanation_classification.ipynb  holdout_tetset.py  make_filtered_codesearchnet.ipynb  make_github_code_doc_corpus.ipynb  make_github_code_doc_corpus.py  make_human_eval_set.py  make_long_code_doc_corpus.ipynb  make_step2_filter_with_ml_annotator.py  process.py
