[tool.poetry]
name = "copilot-2"
version = "0.1.0"
description = "my work at MSR 2021"
authors = ["Haotian <subercui@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
torch = "~1.7"
jupyter = "^1.0.0"
notebook = "^6.4.2"
transformers = "~4.15"
rouge = "^1.0.1"
pandas = "^1.3.1"
matplotlib = "^3.4.3"
radon = "^5.1.0"
openai = "^0.10.2"
scikit-learn = "^0.24.2"
datasets = "^1.17.0"
sacrebleu = ">=1.4.12,<2"
sentencepiece = "^0.1.96"
ipdb = "^0.13.9"
nltk = "^3.6.5"
language-tool-python = "^2.6.1"
bert-score = "^0.3.10"
fairseq = "0.10.0"
rouge-score = "^0.0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
"github3.py" = "0.9.3"
GitPython = "^3.1.24"
wandb = "^0.12.9"
astunparse = "^1.6.3"
black = {version = "^21.12b0", allow-prereleases = true}
tensorboard = "^2.7.0"
tensorboardX = "^2.4.1"
deepspeed = "^0.5.9"
polyleven = "^0.7"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
